dnl Copyright (C) 2017 by Kevin L. Mitchell <klmitch@mit.edu>
dnl
dnl Licensed under the Apache License, Version 2.0 (the "License"); you
dnl may not use this file except in compliance with the License. You
dnl may obtain a copy of the License at
dnl
dnl     http://www.apache.org/licenses/LICENSE-2.0
dnl
dnl Unless required by applicable law or agreed to in writing, software
dnl distributed under the License is distributed on an "AS IS" BASIS,
dnl WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
dnl implied. See the License for the specific language governing
dnl permissions and limitations under the License.

AC_INIT([Humboldt Overlay Network], 0.0.1, [klmitch@mit.edu], [humboldt])
AC_PREREQ(2.69)

AC_COPYRIGHT([Copyright (C) 2017 by Kevin L. Mitchell <klmitch@mit.edu>

Licensed under the Apache License, Version 2.0 (the "License"); you
may not use this file except in compliance with the License. You may
obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
implied. See the License for the specific language governing
permissions and limitations under the License.
])

AC_CONFIG_SRCDIR([src/main.c])
AM_INIT_AUTOMAKE

AC_PROG_CC

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])

AC_OUTPUT
